--- a/Algebra/web/styles/main.css
+++ b/Algebra/web/styles/main.css
@@ -177,3 +177,14 @@ html, body {
     padding-right: 5px;
     padding-top: 10px;
 }
+
+#mousetooltipDiv {
+    position: absolute;
+    display: none;
+    background-color: white;
+    z-index: 1000;
+    padding: 5px;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+}
